relativando o caminho dos scripts

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <footer class="rodape">
         <p class="rodape__texto">Made by Rafael Aguiar Rodrigues</p>
     </footer>
-    <script src="js/form.js"></script>
-    <script src="js/valida.js"></script>
-    <script src="js/remove-contatos.js"></script>
-    <script src="js/filtro.js"></script>
-    <script src="js/edita.js"></script>
+    <script src="./JS/edita.js"></script>
+    <script src="./JS/form.js"></script>
+    <script src="./JS/filtro.js"></script>
+    <script src="./JS/remove-contatos.js"></script>
+    <script src="./JS/valida.js"></script>
 </body>
 
 </html>
